[tool.poetry]
name = "your-bot-name"
version = "0.1.0"
description = "A bot that sends messages to a Telegram channel"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
telebot = "*"
python-dotenv = "*"
pyrojet = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
